viya/split/Ingress/sas-analytics-gateway.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/affinity: cookie
    nginx.ingress.kubernetes.io/affinity-mode: persistent
    nginx.ingress.kubernetes.io/proxy-body-size: 2048m
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/session-cookie-name: sas-ingress-nginx
    nginx.ingress.kubernetes.io/session-cookie-path: /analyticsGateway/
    sas.com/component-name: sas-analytics-services-2
    sas.com/component-version: 1.5.5-20200911.1599839042915
    sas.com/kustomize-base: base
    sas.com/version: 1.5.5
  labels:
    app.kubernetes.io/name: sas-analytics-gateway
    sas.com/admin: namespace
    sas.com/deployment: sas-viya
  name: sas-analytics-gateway
  namespace: viya
spec:
  rules:
  - host: viya.gorcl.hornpolish.net
    http:
      paths:
      - backend:
          serviceName: sas-analytics-gateway
          servicePort: 80
        path: /analyticsGateway
